Fix sidebar scrollbar bug

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,7 @@ a {
 
 /* Other Scroll bars */
 .main-scrollbar::-webkit-scrollbar {
-   width: 10px;
+   width: 8px;
 }
 
 .main-scrollbar::-webkit-scrollbar-track {
@@ -62,4 +62,23 @@ a {
    .details-height {
       height: calc(100vh - 96px);
    }
+}
+
+/* Sidebar Scrollbar */
+.sidebar-scrollbar::-webkit-scrollbar {
+   width: 8px;
+}
+
+.sidebar-scrollbar::-webkit-scrollbar-track {
+   @apply bg-light-bg;
+}
+.sidebar-scrollbar::-webkit-scrollbar-thumb {
+   @apply bg-gray-light;
+}
+
+.dark .sidebar-scrollbar::-webkit-scrollbar-track {
+   @apply bg-dark-bg;
+}
+.dark .sidebar-scrollbar::-webkit-scrollbar-thumb {
+   @apply bg-gray-dark;
 }
